# viapy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  codecov.yml  doc-requirements.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_gitflow.sh  yamlfmt.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: software_release.md
.github/workflows/: changelog.yml  codeql-analysis.yml  codeql.yml  pr-check.yml  python-publish.yml  ruff-checks.yml  sphinx-docs-coverage.yml  sphinx_docs.yml  unit-tests.yml  unit_tests.yml
ci/: testsettings.py
docs/: .buildinfo  Makefile  changelog.html  codedocs.html  codedocs.md  conf.py  docsettings.py  genindex.html  index.html  index.md  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: cached_property.html  index.html
docs/_modules/viapy/: api.html  views.html  widgets.html
docs/_sources/: index.rst.txt
docs/_templates/: sidebar_footer.html
gitflow-hooks/: post-flow-release-finish
sphinx-docs/: Makefile  codedocs.rst  conf.py  docsettings.py  index.md  make.bat
src/viapy/: api.py  test_urls.py  urls.py  views.py  widgets.py
tests/: test_api.py  test_django.py
tests/fixtures/: sru_search.json
viapy/: __init__.py  api.py  test_urls.py  urls.py  views.py  widgets.py
viapy/tests/: test_api.py  test_django.py  test_views.py
viapy/tests/fixtures/: 102333412_rdf.xml  sru_search.json
